# fp-homework

./: .gitignore  README.md  stack.yaml
hw0/: README.md  hw0.cabal
hw0/src/: Task1.hs  Task2.hs  Task3.hs  Task4.hs  Task5.hs  Task6.hs  Task7.hs
hw1/: hw1.cabal
hw1-second-chance/: hw1-second-chance.cabal
hw1-second-chance/src/Block6/: Task1.hs  Task2.hs  Task3.hs
hw1/src/Block1/: Task1.hs  Task2.hs  Task3.hs
hw1/src/Block2/: Task1.hs  Task2.hs
hw1/src/Block3/: Task1.hs  Task2.hs
hw1/src/Block4/: Task1.hs  Task2.hs  Task3.hs
hw1/src/Block5/: Task1.hs  Task2.hs
hw1/src/Block6/: Task2.hs  Task3.hs  Task4.hs
hw1/test/: Block1Spec.hs  Block2Spec.hs  Block3Spec.hs  Block4Spec.hs  Block5Spec.hs  Block6Spec.hs
hw2/: hw2.cabal
hw2/app/: Main.hs
hw2/src/: FileSystem.hs  Utils.hs
hw2/test/: FileSystemSpec.hs  UtilsSpec.hs
hw3/benchmarks/: Bench.hs
hw3/src/: Task1.hs  Task3.hs  Task4.hs  Task5.hs  Task6.hs  Task7.hs  Task8.hs
hw3/test/: Task1Spec.hs  Task3Spec.hs  Task4Spec.hs  Task5Spec.hs  Task6Spec.hs  Task7Spec.hs
