name:                hw1-second-chance
version:             0.1.0.0
synopsis:            Synopsis for task 1
description:         Task 1 for FP ITMO course

homepage:            https://github.com//fp-homework/tree/master/hw1#readme
license:             MIT
license-file:        LICENSE
author:              Arkady Siuris
maintainer:          arss860@gmail.com
copyright:           2020 Arkady Siuris

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       1.12
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     Block6.Task1 Block6.Task2 Block6.Task3
                       Block6.Task4
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
                     , monad-loops
                     , mtl
  default-language:    Haskell2010

test-suite hw1-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base >= 4.9 && < 5
                     , hw1
                     , hspec
                     , QuickCheck
                     , hspec-expectations
                     , containers
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  other-modules:       Block6Spec
  default-language:    Haskell2010
  build-tool-depends:  hspec-discover:hspec-discover